--- a/css/style.css
+++ b/css/style.css
@@ -948,7 +948,7 @@ table td input::placeholder {
   /* Botón hamburguesa visible */
   .menu-toggle {
     display: block;
-    font-size: 1rem;
+    font-size: 3rem;
     color: #fff;
     background: #0b0f12;
     border: none;
@@ -998,6 +998,7 @@ table td input::placeholder {
   /* Enlaces del menú */
   .main-nav ul {
     list-style: none;
+    background-color: #0b0f12;
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
@@ -1013,7 +1014,6 @@ table td input::placeholder {
     text-decoration: none;
     display: block;
     padding: 0.7rem 0;
-    transition: background 0.3s;
     z-index: 7002; /* Enlaces clicables */
     position: relative;
   }
