--- a/css/style.css
+++ b/css/style.css
@@ -910,7 +910,7 @@ table {
 table th {
   background-color: #111;
   color: #fff;
-  font-weight: 150;
+  font-size: 0.7rem;
   padding: 0.3 rem;
   }
 
@@ -975,7 +975,7 @@ table td input::placeholder {
     background-color: #0b0f12; /* 🔥 Fondo negro sólido */
     transition: right 0.3s ease;
     z-index: 7000; /* justo debajo del botón */
-    padding-top: 2rem 1 rem
+    padding-top: 3rem
     display: flex;
     flex-direction: column;
     align-items: center;
