--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
-/* =======================================================
-   style.css - Crossfit The Box
-   Tema oscuro con acentos rojos, diseño responsive usando Flexbox & Grid
-   ======================================================= */
+/*
+Autor: Saioa Echevarria Ballesteros
+Asignatura: LMGSI
+UD: UD 2
+Tarea: Sitio Web
+Documento de Reflexión: https://drive.google.com/file/d/1c3WF-h-CHO0jnjwFMgxkOrCckZlwYSOg/view?usp=drive_link
+*/
 
 /* -------------------- RESET GENERAL -------------------- */
 /* Reinicia márgenes y padding, asegura que el tamaño incluya borde y relleno */
